@@ -41,6 +41,8 @@ public class Lwjgl3Graphics implements Graphics, Disposable {
 	private volatile int backBufferHeight;
 	private volatile int logicalWidth;
 	private volatile int logicalHeight;
+	private volatile boolean isContinuous = true;
+	private volatile boolean requestRendering = false;
 	private BufferFormat bufferFormat;
 	private long lastFrameTime = -1;
 	private float deltaTime;
@@ -370,18 +372,27 @@ public class Lwjgl3Graphics implements Graphics, Disposable {
 
 	@Override
 	public void setContinuousRendering(boolean isContinuous) {
-		// FIXME implement non-continuous rendering
+		this.isContinuous = isContinuous;
 	}
 
 	@Override
 	public boolean isContinuousRendering() {
-		// FIXME implement non-continuous rendering
-		return true;
+		return isContinuous;
 	}
 
 	@Override
 	public void requestRendering() {
-		// FIXME implement non-continuous rendering
+		synchronized (this) {
+			requestRendering = true;
+		}
+	}
+
+	public boolean shouldRender() {
+		synchronized (this) {
+			boolean rq = requestRendering;
+			requestRendering = false;
+			return rq || isContinuous;
+		}
 	}
 
 	@Override
